--- a/blog.html
+++ b/blog.html
@@ -59,9 +59,10 @@
                   <!-- RD Navbar Brand-->
                   <div class="rd-navbar-brand"><a class="brand" href="index.html"><img src="images/logo-default-223x50.png" alt="" width="300" height="79"/></a></div>
                 </div>
+                <spam class="post-modern-text">Impactamos vidas, transformamos negocios, e inspiramos seres humanos.</spam>
                 <div class="rd-navbar-main-element">
                   <div class="rd-navbar-nav-wrap">
-                 
+
                     <ul class="rd-navbar-nav">
                       <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">Inicio</a></li>
                       <li class="rd-nav-item">
@@ -69,12 +70,13 @@
                         <ul class="menu-vertical">
                           <li><a href="quienesosmos.html">Quienes Somos</a></li>
                           <li><a href="programas.html">Programas</a></li>
-                          <li><a href="cursos.html">Cursos</a></li>
+                          <li><a href="servicios.html">Servicios</a></li>
                         </ul>
                       </li>
                      <!-- <li class="rd-nav-item"><a class="rd-nav-link" href="#Laboratorio">Laboratorio</a></li> -->
                       <li class="rd-nav-item"><a class="rd-nav-link" href="tienda.html">Tienda</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="blog.html">Blog</a></li>
+                      <li class="rd-nav-item"><a class="fa fa-whatsapp fa-2x" href="https://wa.link/hdgoo7""></a></li>
                     </ul>
                   </div>
                 </div>
@@ -84,83 +86,86 @@
         </div>
       </header>
 
-
 <!--FLIP CARD blog-->
     <body>
+      <h2>Blog</h2>
      <div class="wrapper">
       <div class="card-blog">
-        <img src="images/ericka.jpg">
+        <img src="images/blog1.jpg">
         <div class="info-blog">
-          <h3>titulo articulo</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid fugit repudiandae earum, error incidunt, neque soluta mollitia ex laboriosam</p>
-          <a href="#" class="btn">Leer mas</a>
+          <h4>EL EXPERIMENTO QUE DIO RIENDA SUELTA AL NEUROMARKETING</h4>
+          <p>Uno de los experimentos de neuromarketing más conocidos involucra a las dos marcas de bebidas más conocidas del mundo: Pepsi y Coca-Cola. 
+          </p>
+          <a href="https://www.linkedin.com/feed/update/urn:li:share:7207018212100587522/" class="btn">Leer mas</a>
         </div>
       </div>
       <div class="card-blog">
-        <img src="images/ericka.jpg"">
+        <img src="images/blog2.jpg"">
         <div class="info-blog">
-          <h3>titulo articulo</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid fugit repudiandae earum, error incidunt, neque soluta mollitia ex laboriosam</p>
-          <a href="#" class="btn">Leer mas</a>
+          <h4>UN MARKETING ANTROPOMORFIZADO</h4>
+          <p>El marketing ha evolucionado significativamente desde sus inicios, adaptándose a los cambios tecnológicos, económicos y sociales. </p>
+          <a href="https://www.linkedin.com/posts/doctorcastillo_un-marketing-antropormofizado-conectado-activity-7208474020843847680-7sFP/?utm_source=share&utm_medium=member_desktop" class="btn">Leer mas</a>
         </div>
       </div>
       <div class="card-blog">
-        <img src="images/ericka.jpg"">
+        <img src="images/blo3.jpg"">
         <div class="info-blog">
-          <h3>titulo articulo</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid fugit repudiandae earum, error incidunt, neque soluta mollitia ex laboriosam</p>
-          <a href="#" class="btn">Leer mas</a>
+          <h6>LA PREHISTORIA DEL NEUROMARKETING: COMO SE DESCUBRIERON LOS CENTROS EMOCIONALES DEL CEREBRO</h6>
+          <p>La metodología utilizada consistió en implantar electrodos en diferentes regiones del cerebro de las ratas, incluida el área septal, y aplicar estímulos eléctricos a estas áreas. 
+          </p>
+          <a href="https://www.linkedin.com/feed/update/urn:li:activity:7208833212775579649/" class="btn">Leer mas</a>
         </div>
       </div>
       <div class="card-blog">
-        <img src="images/ericka.jpg"">
+        <img src="images/blog4.jpg">
         <div class="info-blog">
-          <h3>titulo articulo</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid fugit repudiandae earum, error incidunt, neque soluta mollitia ex laboriosam</p>
-          <a href="#" class="btn">Leer mas</a>
+          <h6>EL "CEREBRO TRIUNO" NO ES UN MODELO ACEPTADO POR LA NEUROCIENCIA MODERNA </h6>
+          <p>El concepto del "cerebro triuno" fue propuesto por Paul D. MacLean en la década de 1960 (MacLean, P., 1960). Según MacLean, estas tres estructuras representan etapas sucesivas de la evolución. 
+          </p>
+          <a href="https://www.linkedin.com/feed/update/urn:li:activity:7209574968341209091/" class="btn">Leer mas</a>
         </div>
       </div>
       <div class="card-blog">
-        <img src="images/ericka.jpg"">
+        <img src="images/blog5.jpg"">
         <div class="info-blog">
-          <h3>titulo articulo</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid fugit repudiandae earum, error incidunt, neque soluta mollitia ex laboriosam</p>
-          <a href="#" class="btn">Leer mas</a>
+          <h4>NEUROEDUCACION: Cerebro y Aprendizaje.
+          </h4>
+          <p>La neurociencia ha proporcionado un marco esencial para entender cómo el cerebro aprende y cuáles son las mejores estrategias para optimizar el proceso educativo. </p>
+          <a href="https://www.linkedin.com/feed/update/urn:li:activity:7209939621797867522/" class="btn">Leer mas</a>
         </div>
       </div>
       <div class="card-blog">
-        <img src="images/ericka.jpg"">
+        <img src="images/blog6.jpg">
         <div class="info-blog">
-          <h3>titulo articulo</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid fugit repudiandae earum, error incidunt, neque soluta mollitia ex laboriosam</p>
-          <a href="#" class="btn">Leer mas</a>
-        </div>
-      </div>
-      <div class="card-blog">
-        <img src="images/ericka.jpg"">
-        <div class="info-blog">
-          <h3>titulo articulo</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid fugit repudiandae earum, error incidunt, neque soluta mollitia ex laboriosam</p>
-          <a href="#" class="btn">Leer mas</a>
-        </div>
-      </div>
-      <div class="card-blog">
-        <img src="images/ericka.jpg"">
-        <div class="info-blog">
-          <h3>titulo articulo</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid fugit repudiandae earum, error incidunt, neque soluta mollitia ex laboriosam</p>
-          <a href="#" class="btn">Leer mas</a>
-        </div>
-      </div>
-      <div class="card-blog">
-        <img src="images/ericka.jpg"">
-        <div class="info-blog">
-          <h3>titulo articulo</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid fugit repudiandae earum, error incidunt, neque soluta mollitia ex laboriosam</p>
+          <h6>DE COMO EL INTERNET CAMBIO EL CEREBRO Y LA MENTE HUMANA PARA SIEMPRE. Parte 1. </h6>
+          <p>Conoce las potenciales implicaciones en la forma en que debería cambiar la educación de los nativos digitales y su impacto en sus perfiles de cómo influye en ellos la publicidad y las formas de consumo. </p>
           <a href="#" class="btn">Leer mas</a>
         </div>
       </div>
      </div>
+<br>
+      <Section>
+        <div class="titulo-videos">
+        <h3 class="Nuestros-video" data-text="Videos">Videos</h3>
+        </div>
+<br>
+        <div class="container">
+          <p>No te pierdas nuestra selección de videos, donde aprenderás a crear entornos y productos más efectivos y agradables utilizando conocimientos de neurociencia. Ademas, aprenderas mucho mas.</p> <br>
+          <br>
+          <br>
+
+          <iframe width="500" height="315" src="https://www.youtube.com/embed/VnoLBKLuCZ4?si=008Zq5Wp_Dn6-ZOB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe class="" width="500" height="315" src="https://www.youtube.com/embed/3bArb6CM8MI?si=HUF3kkC4Xt2gVlyL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> <iframe width="500" height="315" src="https://www.youtube.com/embed/AG-TDpWrn9U?si=Pdgqr0pn6-fAQaTF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>     
+               <iframe width="500" height="315" src="https://www.youtube.com/embed/VnoLBKLuCZ4?si=008Zq5Wp_Dn6-ZOB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                
+                <iframe width="500" height="315" src="https://www.youtube.com/embed/Sre4TZnSO0w?si=1If_lCjB4yEdTCyW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="500" height="315" src="https://www.youtube.com/embed/J4yqR6_FSgU?si=GTbSVdjR7czKfqKT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="500" height="315" src="https://www.youtube.com/embed/Ja6vYIsdELQ?si=wH3us1ogtdfyFusv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="500" height="315" src="https://www.youtube.com/embed/2Q2ozmNGQP0?si=ua0IsXDuohbWf-D_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="500" height="315" src="https://www.youtube.com/embed/58AVO_oiBrU?si=WZ61lKX9cr1LgQN4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+      </Section>
+
     </body>
 <!--FLIP CARD blog end-->
 
@@ -182,7 +187,7 @@
                   </div>
                   <div class="col-sm-6 col-md-4 order-sm-first">
                     <!-- Rights-->
-                    <sp class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> <span>NeuroMind</span>
+                    <sp class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> <span>NeuroMinds Education</span>
                     </sp>
                   </div>
                   </div>
